# openapi.yaml
@@ -43,36 +43,15 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/.LoginFirebaseResponse'
-    /api/v1/user:
-        post:
-            tags:
-                - UsersService
-            description: 通过id获取用户信息
-            operationId: UsersService_GetUser
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/.GetUserRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/.GetUserResponse'
-    /api/v1/user/me:
+    /api/v1/user/info:
         post:
             tags:
                 - UsersService
             description: 获取自己的用户信息
-            operationId: UsersService_GetMyUser
+            operationId: UsersService_UserInfo
             requestBody:
                 content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/.GetMyUserRequest'
+                    application/json: {}
                 required: true
             responses:
                 "200":
@@ -80,28 +59,39 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/.GetMyUserResponse'
+                                $ref: '#/components/schemas/.UserInfoResponse'
+    /api/v1/user/profile:
+        post:
+            tags:
+                - UsersService
+            description: 通过userUid获取用户信息
+            operationId: UsersService_GetUserProfile
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/.GetUserProfileRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/.GetUserProfileResponse'
 components:
     schemas:
-        .GetMyUserRequest:
-            type: object
-            properties: {}
-        .GetMyUserResponse:
+        .GetUserProfileRequest:
             type: object
             properties:
-                user:
-                    $ref: '#/components/schemas/.UserDTO'
-        .GetUserRequest:
-            type: object
-            properties:
-                id:
+                userUid:
                     type: integer
                     format: int32
-        .GetUserResponse:
+        .GetUserProfileResponse:
             type: object
             properties:
-                user:
-                    $ref: '#/components/schemas/.UserDTO'
+                userInfo:
+                    $ref: '#/components/schemas/.UserProfile'
         .LoginFirebaseRequest:
             type: object
             properties:
@@ -122,25 +112,20 @@ components:
         .UploadFileRequest:
             type: object
             properties: {}
-        .UserDTO:
+        .UserInfoResponse:
+            type: object
+            properties:
+                userInfo:
+                    $ref: '#/components/schemas/.UserProfile'
+        .UserProfile:
             type: object
             properties:
                 id:
                     type: integer
                     format: int32
-                nickname:
-                    type: string
-                avatar:
-                    type: string
-                email:
-                    type: string
-                provider:
-                    type: string
-                providerUid:
-                    type: string
-        .UserProfile:
-            type: object
-            properties:
+                userUid:
+                    type: integer
+                    format: int32
                 nickname:
                     type: string
                 avatar:
